# scout-v2

./: .gitignore  .npmrc  README.md  graph.py  package-lock.json  package.json  scout.code-workspace  vercel.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  deploy-agent.yml  deploy-web.yml  preview.yml
.vercel/: project.json
agent/: pyproject.toml
agent/.langgraph_api/: .langgraph_ops.pckl  .langgraph_retry_counter.pckl
agent/src/: config.ts  graph.py
agent/src/sre_investigation_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agent/src/tools/: datadog.py
apps/agent/: README.md  langgraph.json  pyproject.toml  run_investigation.py  test_mock_triage.py
apps/agent/src/: __init__.py  credentials.py  graph.py  simple_graph.py
apps/agent/src/tools/: __init__.py  datadog.py  github.py  memory.py  runbooks.py  slack.py
apps/web/: README.md  next.config.ts  package-lock.json  package.json  vercel.json
apps/web/scripts/: local-cron.sh
apps/web/src/: middleware.ts  proxy.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/hooks/: index.ts  use-integrations.ts  use-user.ts
apps/web/src/lib/: constants.ts
apps/web/src/types/: database.ts
docs/: README.md  api-reference.md  buding ai sre .md  code-review.md  dev first.md  first principals.md  mock dd triage env.md  product-spec.md  quickstart.md
sre-agent/src/langgraph/: prompts.ts  runner.ts
sre-agent/src/langgraph/tools/: datadog.ts  github.ts
supabase/: AUTH_SETUP.md  README.md  client.ts  database.ts  realtime.ts  setup.sql
(+81 files in other folders)
