[project]
name = "sre-investigation-agent"
version = "0.2.0"
description = "Deep Agent SRE Investigation System with Sub-Agents"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.2.0",
    "langchain>=1.0.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "langsmith>=0.1.0",
    "datadog-api-client>=2.0.0",
    "PyGithub>=2.0.0",
    "slack-sdk>=3.0.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

